<resources>
    <string name="app_name">Task-it</string>


    <string name="txt_heading">Welcome to Task-it</string>
    <string name="btn_enter">Get Started</string>
    <string name="txt_log_heading">Task-it</string>
    <string name="txt_login">Login</string>
    <string name="txt_telNo">Telephone No</string>
    <string name="txt_password">Password</string>
    <string name="et_telNo" />
    <string name="et_password" />
    <string name="btn_forgot">Forgot Password</string>
    <string name="btn_submitLogin">Login</string>
    <string name="btn_newAcc">Create New Account</string>
    <string name="txt_logEmp">Login as an Employee</string>
    <string name="txt_headNewCus">Create New Account</string>
    <string name="txt_fName">First Name</string>
    <string name="txt_lName">Last Name</string>
    <string name="txt_email">Email</string>
    <string name="et_fName" />
    <string name="et_lName" />
    <string name="et_email" />
    <string name="btn_submitNewLogin">Submit</string>
    <string name="txt_headNew">Create New Account</string>
    <string name="btn_cus">As a Customer</string>
    <string name="btn_emp">As an Employee</string>
    <string name="btn_myAccount">My Account</string>
    <string name="btn_jobHistory">Job History</string>
    <string name="txt_headCusMyAcc">My</string>
    <string name="btn_updateCusAcc">Submit</string>
    <string name="btn_cusLocation">My Location</string>
    <string name="txt_headCusMyLoc">Loc</string>
    <string name="txt_HouseNo">House No</string>
    <string name="txt_Street">Street</string>
    <string name="txt_city">City</string>
    <string name="txt_district">District</string>
    <string name="txt_zipCode">Zip Code</string>
    <string name="et_HouseNo" />
    <string name="et_street" />
    <string name="et_city" />
    <string name="et_district" />
    <string name="et_zipCode" />
    <string name="btn_updateCusLoc">Submit</string>
    <string name="txt_headCusMyAccUp">Update Account</string>
    <string name="txt_headCusLocUp">Update Location</string>
    <string name="txt_headCusMyFav">Favourites</string>
    <string name="btn_updateCusFavDel">Delete</string>
    <string name="txt_headCusShJobHis">Job History</string>
    <string name="btn_deleteJobHis">Delete</string>
    <string name="btn_newCusLoc">Add Location</string>
    <string name="txt_headCusLocNew">Add Location</string>
    <string name="btn_submitAdd">Submit</string>
    <string name="btn_submitLogAsEmp">Login as an Employee</string>
    <string name="txt_headForgotPass">Forgot Password</string>
    <string name="paraForgot">Please Enter your Email Address and Tel No to Validate Your Account</string>
    <string name="btn_submitForgotPass">Submit</string>
    <string name="txt_headCusMyPro">My Profile</string>
    <string name="btn_myProAccount">My Account</string>
    <string name="Welcomesub">All of your service needs at the tip of your fingertips</string>
    <string name="btn_updateCusAccUp">Update</string>
    <string name="btn_submitLogin2Next">Next</string>
    <string name="backCreate">Back</string>
    <string name="BackToMyAcc">Back</string>
    <string name="BackToCusLog">Back</string>
    <string name="btn_updateCusLocUp">Update</string>
    <string name="BackToMyProfile">Back</string>
    <string name="BackToCreNewAcc">Back</string>
    <string name="BackToCusNewAcc">Back</string>
    <string name="BackToMyPro">Back</string>
    <string name="txt_headCusMyLoc2">Location</string>
    <string name="txt_headCusMyAcc3">Account</string>
    <string name="txt_CustomercareHead">Welcome</string>
    <string name="txt_CustomercareHeadName">Name</string>
    <string name="txt_nameCC">Name</string>
    <string name="et_nameCC" />
    <string name="txt_telNoCC">Tele No</string>
    <string name="et_telNoCC" />
    <string name="txt_nameCC4">Issue</string>
    <string name="txt_nameCC6">Date</string>
    <string name="btn_SubmitCC">Submit</string>
    <string name="txt_Telno">Telephone No</string>
    <string name="button2">Customer Care</string>
    <string name="txt_favName">Employee Name</string>
    <string name="txt_favTelno">Tel No</string>
    <string name="et_favName" />
    <string name="et_favTelno" />

    //side bar
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="btn_favDelete">Delete</string>
    <string name="fav_name">Name</string>
    <string name="fav_telNo">Tel No</string>
    <string name="btn_cusDeleteAcc">Delete Account</string>



    <string name="txt_head">Awesome. I love it</string>
    <string name="txt_head1">We hope you Satisfied with our service</string>
    <string name="btn_start">Start</string>
    <string name="btn_pause">Pause</string>
    <string name="btn_completed">Completed</string>
    <string name="txt_jobprog">Job Progress</string>

    <string name="txt_job">JobID</string>
    <string name="txt_Job">JobID  :</string>
    <string name="txt_descript">Select the (Payment Recieved) after recieving the payment.</string>
    <string name="txt_cardesc">Select the (Payment Received) after receiving the payment confirmation notification from the Bank and Proceed</string>


    <string name="txtID">ID</string>
    <string name="txtName">Name :</string>
    <string name="txtAdd">Address</string>
    <string name="txtConNo">Contact No</string>
    <string name="save">SAVE</string>
    <string name="show">SHOW</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="head">Task-It</string>
    <string name="subhead1">Enter Your Details</string>
    <string name="name1">Name</string>
    <string name="nic1">NIC</string>
    <string name="email1">Email</string>
    <string name="phone1">Phone</string>
    <string name="submit1">Next</string>
    <string name="reset1">Exit</string>
    <string name="txtname1" />
    <string name="txtnic1" />
    <string name="txtemail1" />
    <string name="txtphone1" />
    <string name="subhead2">Login as An Employee</string>
    <string name="txtun1">Phone</string>
    <string name="txtpw1">Password</string>
    <string name="inun1" />
    <string name="inpw1" />
    <string name="btnfog1">Forgot Password</string>
    <string name="btnlog1">Login</string>
    <string name="btncnew1">Create New Account</string>
    <string name="btnlogascus1">Login As a Customer</string>
    <string name="subhed3">Create an Account</string>
    <string name="txtdis3">In order to activate your account, you have to visit the nearest Task-it office after uploading your CV and required information. You can upload your CV in the next page.</string>
    <string name="btnacancont1"><![CDATA[Accept & Continue]]></string>
    <string name="btnnothanks1">No, thanks</string>
    <string name="subhead4">Registration Successful</string>
    <string name="txtsucdis4">Thank you for registering. Your data is submitted. We will check your CV and reference and inform about the interview date and office location via an email</string>
    <string name="btnsucexit1">Login</string>
    <string name="btnresubmit1">Resubmit Information</string>
    <string name="subhead5">Reset Password</string>
    <string name="txtreset5">Phone</string>
    <string name="inputphone5" />
    <string name="txtpwreset5">We will send a reset code to your phone as a text message. Type the code as the new password.</string>
    <string name="btnbackre5">Back</string>
    <string name="btnsendcode5">Send Reset Code</string>
    <string name="txt_log_heading9">Add a Password</string>
    <string name="subhead55">Add a Password</string>
    <string name="newpw55">New Password</string>
    <string name="conpw55">Confirm Password</string>
    <string name="addpw55" />
    <string name="addconpw55" />
    <string name="sub55">Submit</string>
    <string name="ex23">Cancel</string>
    <string name="empHed">Task-it</string>
    <string name="empcsh">All tasks. One App</string>
    <string name="eq">Equipments :</string>
    <string name="equip">No Equipments</string>
    <string name="noav">Not available</string>
    <string name="av">available</string>
    <string name="tvPri">Price :</string>
    <string name="nameProf">Name</string>
    <string name="Phone">Phone Number</string>
    <string name="cat">Category</string>
    <string name="email">Email</string>
    <string name="dispri">Price</string>
    <string name="updateacc">Update</string>
    <string name="resetvals">Reset</string>
    <string name="savechan">Save</string>
    <string name="setloc">Location :</string>
    <string name="txtreset2">Email</string>
    <string name="txtreset22">NIC</string>
    <string name="btnlog11">Reset</string>
    <string name="Phoneqwe">Reset Password</string>
    <string name="btn_carpentry">Carpentry</string>
    <string name="btn_chef">Chef</string>
    <string name="btn_cleaning">Cleaning</string>
    <string name="btn_courier">Courier</string>
    <string name="btn_electric">Electrical Service</string>
    <string name="btn_gardening">Gardening</string>
    <string name="btn_painting">Painting</string>
    <string name="btn_plumbing">Plumbing</string>
    <string name="btn_welding">Welding</string>
    <string name="btn_watchman">Watchman</string>
    <string name="btn_pest">PEST CONTROL</string>
    <string name="btn_watch">WATCHAMN</string>
    <string name="btn_yoga">YOGA INSTRUCTOR</string>
    <string name="cusHeaderName">Task-it</string>
    <string name="cusHeaderSubName">All tasks. One App</string>


</resources>