<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".CusNewLocation">

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="508dp"
        android:layout_height="1180dp"
        android:src="@drawable/addlocation"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.222" />

    <Button
        android:id="@+id/btn_submitAdd"
        android:layout_width="104dp"
        android:layout_height="55dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="115dp"
        android:onClick="addCus"
        android:text="@string/btn_submitAdd"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="#86C232"
        app:cornerRadius="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_zipCode3"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/BackToCusNewAcc"
        android:layout_width="93dp"
        android:layout_height="55dp"
        android:layout_marginStart="44dp"
        android:onClick="BackToCusNewAcc"
        android:text="@string/BackToCusNewAcc"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="#61892f"
        app:cornerRadius="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_submitAdd"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txt_zipCode2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:fontFamily="sans-serif"
        android:text="@string/txt_zipCode"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_zipCode3"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_district3"
        android:layout_width="188dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/rounded_corner_view"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/et_district"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_city3"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/txt_district3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:fontFamily="sans-serif"
        android:text="@string/txt_district"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_district3"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_city3"
        android:layout_width="188dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/rounded_corner_view"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:inputType="textPersonName|textEmailAddress"
        android:text="@string/et_city"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_street3"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/txt_city2"
        android:layout_width="84dp"
        android:layout_height="24dp"
        android:layout_marginStart="36dp"
        android:fontFamily="sans-serif"
        android:text="@string/txt_city"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_city3"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_street3"
        android:layout_width="188dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/rounded_corner_view"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/et_street"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_HouseNo3"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/txt_Street2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:fontFamily="sans-serif"
        android:text="@string/txt_Street"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_street3"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_HouseNo3"
        android:layout_width="188dp"
        android:layout_height="45dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/rounded_corner_view"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/et_HouseNo"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_headCusLocNew"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/et_zipCode3"
        android:layout_width="188dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/rounded_corner_view"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:inputType="number"
        android:text="@string/et_zipCode"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_district3"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/txt_HouseNo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:fontFamily="sans-serif"
        android:text="@string/txt_HouseNo"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_HouseNo3"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_headCusLocNew"
        android:layout_width="368dp"
        android:layout_height="60dp"
        android:layout_marginTop="76dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/txt_headCusLocNew"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>