<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".CusNewAccount">

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="483dp"
        android:layout_height="1065dp"
        android:src="@drawable/userpro"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101" />

    <Button
        android:id="@+id/btn_submitLogin2Next"
        android:layout_width="104dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="36dp"
        android:text="@string/btn_submitLogin2Next"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="#86C232"
        app:cornerRadius="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password4"
        app:layout_constraintVertical_bias="0.246" />

    <Button
        android:id="@+id/BackToCreNewAcc"
        android:layout_width="93dp"
        android:layout_height="55dp"
        android:layout_marginStart="36dp"
        android:onClick="BackToCreate"
        android:text="@string/BackToCreNewAcc"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="#61892f"
        app:cornerRadius="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_submitLogin2Next"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txt_telNo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:fontFamily="sans-serif"
        android:text="@string/txt_telNo"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_telNo2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_fName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:fontFamily="sans-serif"
        android:text="@string/txt_fName"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_fName"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_lName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:fontFamily="sans-serif"
        android:text="@string/txt_lName"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_lName"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="84dp"
        android:layout_height="24dp"
        android:layout_marginStart="36dp"
        android:fontFamily="sans-serif"
        android:text="@string/txt_email"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_email"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_lName"
        android:layout_width="188dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/rounded_corner_view"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/et_lName"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_fName"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="188dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/rounded_corner_view"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:inputType="textPersonName|textEmailAddress"
        android:text="@string/et_email"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_lName"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/et_telNo2"
        android:layout_width="188dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/rounded_corner_view"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:inputType="textPersonName|phone"
        android:text="@string/et_telNo"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/et_password4"

        android:layout_width="188dp"
        android:layout_height="45dp"

        android:layout_marginTop="12dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/rounded_corner_view"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:inputType="textPassword"
        android:text="@string/et_password"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_telNo2"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/et_fName"
        android:layout_width="188dp"
        android:layout_height="45dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/rounded_corner_view"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/et_fName"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_headNewCus"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/txt_password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:fontFamily="sans-serif"
        android:text="@string/txt_password"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_password4"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_log_heading2"
        android:layout_width="203dp"
        android:layout_height="77dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/txt_log_heading"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09" />

    <TextView
        android:id="@+id/txt_headNewCus"
        android:layout_width="368dp"
        android:layout_height="60dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/txt_headNewCus"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_log_heading2"
        app:layout_constraintVertical_bias="0.038" />

</androidx.constraintlayout.widget.ConstraintLayout>