<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="com.example.task_it.ProgressBar2">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="111dp"
        android:layout_marginLeft="60dp"
        android:text="@string/txt_jobprog"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold" />


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:indeterminateBehavior="repeat"

        android:indeterminateDrawable="@drawable/proc"
        android:keepScreenOn="true" />

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startChronometer"
        android:text="@string/btn_start"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#86C232"
        app:cornerRadius="16sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:onClick="pauseChronometer"
        android:textColor="@color/white"
        android:text="@string/btn_pause"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#61892f"

        app:cornerRadius="16sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:onClick="resetChronometer"
        android:text="@string/btn_completed"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#86C232"
        app:cornerRadius="16sp" />



</LinearLayout>